crates/brom-macros/tests/fixtures/fail_not_struct.stderr
error: BromEntity can only be derived on structs with named fields
 --> tests/fixtures/fail_not_struct.rs:4:10
  |
4 | pub enum NotAStruct {
  |          ^^^^^^^^^^
