crates/brom-macros/tests/fixtures/fail_not_struct.rs
use brom_macros::BromEntity;

#[derive(BromEntity)]
pub enum NotAStruct {
    Variant,
}

fn main() {}
